--- a/index.html
+++ b/index.html
@@ -32,6 +32,31 @@
         }
     </script>
     <style>
+        @media all and (max-width:2000px) {
+            body {
+                border: 1px solid red;
+            }
+        }
+        @media all and (max-width:1800px) {
+            body {
+                border: 1px solid blue;
+            }
+        }
+        @media all and (max-width:1600px) {
+            body {
+                border: 1px solid green;
+            }
+        }
+        @media all and (max-width:1400px) {
+            body {
+                border: 1px solid orange;
+            }
+        }
+        @media all and (max-width:1200px) {
+            body {
+                border: 1px solid purple;
+            }
+        }
         /* Slideshow */
         .slideshow {
             margin:-2px;
@@ -39,11 +64,7 @@
             position: relative;
             width: 530px;
             height: 400px;
-            /*border: 10px solid #191919;*/
-            /*background-color: #191919;*/
-            /*overflow: hidden;*/
         }
-
         .slideshow > div.imgCont {
             position: absolute;
             top: 0;
@@ -55,7 +76,6 @@
         .imgCont img{
             height: 400px; width: 530px;
         }
-
         #slideshow3 div.imgCont img, #slideshow4{
             height: 450px; width: 600px;
         }
@@ -66,7 +86,14 @@
            left: 600px;
         }
         .blackOverlay{
-            position: absolute; height: 400px; width:530px; background-color: #464646; opacity: 0.75; z-index: 10; top: 0;left: 100%;
+            position: absolute;
+            height: 400px;
+            width:530px;
+            background-color: #464646;
+            opacity: 0.75;
+            z-index: 10;
+            top: 0;
+            left: 100%;
         }
         #slideshowBorder{
             position: absolute;
@@ -74,8 +101,8 @@
             width: 590px;
             border: 10px solid #363636;
             z-index: 10;
-            left: 650px;
-            bottom: 21px;
+            left: 2110px;
+            bottom: -30px;;
             -webkit-box-shadow: 0 0 15px 0 rgba(38,38,38,1);
             -moz-box-shadow: 0 0 15px 0 rgba(38,38,38,1);
             box-shadow: 0 0 15px 0 rgba(38,38,38,1);
@@ -91,11 +118,11 @@
 <!-- Content -->
 <div class="posRel" style="width: 100%; margin:15px auto 25px auto; text-align: center; min-height: 453px;overflow:hidden;">
 
-    <div id="slideshowBorder" style=""></div>
 
-    <div class=" posRel" style="width: 4000px; text-align: left; height: 398px;margin: 90px auto 50px;left: -1460px;
+
+    <div class="posRel" style="width: 4000px; text-align: left; height: 398px;margin: 90px auto 50px;left: -1490px;
     -webkit-box-shadow: 0 0 20px rgba(0,0,0,0.4);-moz-box-shadow: 0 0 20px rgba(0,0,0,0.4);box-shadow: 0 0 20px rgba(0,0,0,0.4);">
-
+        <div id="slideshowBorder" style=""></div>
 
         <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
         <div id="slideshow7" class="slideshow inlineBlock vertAlignTop ">
