Percentage changes aren't changing anything

--- a/index.html
+++ b/index.html
@@ -62,28 +62,33 @@
             margin:-2px;
             padding: 0;
             position: relative;
-            width: 530px;
-            height: 400px;
+            width: 13.25%;
+            height: 100.5%;
         }
         .slideshow > div.imgCont {
             position: absolute;
             top: 0;
-            left: 530px;
+            left: 100%;
             right: 0;
             bottom: 0;
             margin: 0;
+            height: 100%;
+            width: 100%;
+        }
+        .imgCont {
+            height: 100.5%; width: 100%;
         }
         .imgCont img{
-            height: 400px; width: 530px;
+            height: 100%; width: 100%;
         }
-        #slideshow3 div.imgCont img, #slideshow4{
+        #slideshow3 div.imgCont img{
             height: 450px; width: 600px;
         }
         #slideshow3 div.imgCont img{
             bottom: 25px; position: relative;;
         }
-        #slideshow4 div.imgCont{
-           left: 600px;
+        #slideshow4{
+            left: 70px;
         }
         .blackOverlay{
             position: absolute;
@@ -157,9 +162,9 @@
             <div class="imgCont"><img src="images/pictures/ss-spd1.jpg" /></div>
             <div class="imgCont"><img src="images/pictures/ss-spd2.jpg" /></div>
             <!-- Welcome Letter-->
-            <div class="inlineBlock opensans centerDiv vertAlignTop centerText posAbs colWhite fonSize20 height100" style="left: 530px; width: 500px;padding: 0 12px;z-index: 11;">
+            <div class="inlineBlock opensans centerDiv vertAlignTop centerText posAbs colWhite fonSize20 height100 width100" style="left: 98%;padding: 0 12px;z-index: 11;">
                 <div class="" style=" font-family: Amaranth; font-size: 36px; margin: 25px 0 25px 0;">Welcome to Sigma Phi Delta!</div>
-                <div style="font-size: 20px;">We are a <strong>professional</strong> and <strong>social</strong> engineering fraternity made up of the most excellent male engineers at
+                <div style="font-size: 20px;padding: 0 10px;">We are a <strong>professional</strong> and <strong>social</strong> engineering fraternity made up of the most excellent male engineers at
                     Stony Brook University. Our fraternity is dedicated to guiding its members towards professional and <strong>academic
                         success</strong> while enriching the college experience for engineering students.
                 </div>
@@ -190,9 +195,9 @@
             <div class="imgCont"><img src="images/pictures/ss-spd6.jpg" /></div>
             <div class="imgCont"><img src="images/pictures/ss-spd7.jpg" /></div>
             <!-- Interested in Rushing?-->
-            <div class="opensans centerDiv vertAlignTop centerText posAbs" style="left: 605px; font-size: 20px; height: 100%; width: 500px; color: white;padding: 0 12px;z-index: 11;">
+            <div class="opensans centerDiv vertAlignTop centerText posAbs height100 width100 colWhite" style="left: 98%; font-size: 20px;padding: 0 12px;z-index: 11;">
                 <div class="" style="color: white; font-family: Amaranth; font-size: 36px; margin: 25px 0 25px 0;">Interested in joining?</div>
-                <div style="font-size: 20px;">The academic, professional, and networking opportunities are boundless as a member of Sigma Phi Delta.
+                <div style="font-size: 20px;padding: 0 10px;">The academic, professional, and networking opportunities are boundless as a member of Sigma Phi Delta.
                     Learn in detail about these opportunities and how to join Sigma Phi Delta at our RUSH page.
                 </div>
 
