--- a/index.html
+++ b/index.html
@@ -33,29 +33,24 @@
     </script>
     <style>
         @media all and (max-width:2000px) {
-            body {
-                border: 1px solid red;
-            }
+            body    {  border: 1px solid red;  }
+            #ssCont {  width: 4000px;          }
         }
         @media all and (max-width:1800px) {
-            body {
-                border: 1px solid blue;
-            }
+            body {  border: 1px solid blue;  }
+            #ssCont {  width: 3600px;          }
         }
         @media all and (max-width:1600px) {
-            body {
-                border: 1px solid green;
-            }
+            body {  border: 1px solid green;  }
+            #ssCont {  width: 3200px;          }
         }
         @media all and (max-width:1400px) {
-            body {
-                border: 1px solid orange;
-            }
+            body {  border: 1px solid orange;  }
+            #ssCont {  width: 2800px;          }
         }
         @media all and (max-width:1200px) {
-            body {
-                border: 1px solid purple;
-            }
+            body {  border: 1px solid purple;  }
+            #ssCont {  width: 2400px;          }
         }
         /* Slideshow */
         .slideshow {
@@ -82,18 +77,17 @@
             height: 100%; width: 100%;
         }
         #slideshow3 div.imgCont img{
-            height: 450px; width: 600px;
+            height: 112.5%; width: 112%;
+            bottom: 6.25%; position: relative;
         }
-        #slideshow3 div.imgCont img{
-            bottom: 25px; position: relative;;
-        }
+
         #slideshow4{
-            left: 70px;
+            left: 1.60%;
         }
         .blackOverlay{
             position: absolute;
-            height: 400px;
-            width:530px;
+            height: 100%;
+            width:100%;
             background-color: #464646;
             opacity: 0.75;
             z-index: 10;
@@ -102,12 +96,12 @@
         }
         #slideshowBorder{
             position: absolute;
-            height: 440px;
-            width: 590px;
+            height: 111%;
+            width: 14.55%;
             border: 10px solid #363636;
             z-index: 10;
-            left: 2110px;
-            bottom: -30px;;
+            left: 52.75%;
+            bottom: -7.5%;
             -webkit-box-shadow: 0 0 15px 0 rgba(38,38,38,1);
             -moz-box-shadow: 0 0 15px 0 rgba(38,38,38,1);
             box-shadow: 0 0 15px 0 rgba(38,38,38,1);
@@ -125,7 +119,7 @@
 
 
 
-    <div class="posRel" style="width: 4000px; text-align: left; height: 398px;margin: 90px auto 50px;left: -1490px;
+    <div id="ssCont" class="posRel" style="text-align: left; height: 398px;margin: 90px auto 50px;left: -80%;
     -webkit-box-shadow: 0 0 20px rgba(0,0,0,0.4);-moz-box-shadow: 0 0 20px rgba(0,0,0,0.4);box-shadow: 0 0 20px rgba(0,0,0,0.4);">
         <div id="slideshowBorder" style=""></div>
 
@@ -164,7 +158,7 @@
             <!-- Welcome Letter-->
             <div class="inlineBlock opensans centerDiv vertAlignTop centerText posAbs colWhite fonSize20 height100 width100" style="left: 98%;padding: 0 12px;z-index: 11;">
                 <div class="" style=" font-family: Amaranth; font-size: 36px; margin: 25px 0 25px 0;">Welcome to Sigma Phi Delta!</div>
-                <div style="font-size: 20px;padding: 0 10px;">We are a <strong>professional</strong> and <strong>social</strong> engineering fraternity made up of the most excellent male engineers at
+                <div style="font-size: 20px;padding: 0 15px;">We are a <strong>professional</strong> and <strong>social</strong> engineering fraternity made up of the most excellent male engineers at
                     Stony Brook University. Our fraternity is dedicated to guiding its members towards professional and <strong>academic
                         success</strong> while enriching the college experience for engineering students.
                 </div>
