--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script src="js/jquery.color.js"></script>
 
     <script type="text/javascript">
-        if (screen.width <= 699) {
+        if (screen.width <= 899) {
             document.location = "mobile.html";
         }
     </script>
@@ -33,24 +33,23 @@
     </script>
     <style>
         @media all and (max-width:2000px) {
-            body    {  border: 1px solid red;  }
-            #ssCont {  width: 4000px;          }
-        }
-        @media all and (max-width:1800px) {
-            body {  border: 1px solid blue;  }
-            #ssCont {  width: 3600px;          }
+            #ssCont{
+                width: 200%;
+                height: 398px;
+                left: -70%;
+            }
+
         }
         @media all and (max-width:1600px) {
-            body {  border: 1px solid green;  }
-            #ssCont {  width: 3200px;          }
+            #ssCont{
+                width: 240%;
+                height: 298px;
+                left: -95%;
+            }
         }
-        @media all and (max-width:1400px) {
-            body {  border: 1px solid orange;  }
-            #ssCont {  width: 2800px;          }
-        }
-        @media all and (max-width:1200px) {
-            body {  border: 1px solid purple;  }
-            #ssCont {  width: 2400px;          }
+
+        .scalingFontSize{
+            font-size: 1vw;
         }
         /* Slideshow */
         .slideshow {
@@ -115,11 +114,11 @@
 <div id="header"></div>
 
 <!-- Content -->
-<div class="posRel" style="width: 100%; margin:15px auto 25px auto; text-align: center; min-height: 453px;overflow:hidden;">
+<div class="posRel" style="width: 100%; margin:15px auto 45px auto; text-align: center; min-height: 453px;overflow:hidden;">
 
 
 
-    <div id="ssCont" class="posRel" style="text-align: left; height: 398px;margin: 90px auto 50px;left: -80%;
+    <div id="ssCont" class="posRel" style="text-align: left; margin: 90px auto 50px;
     -webkit-box-shadow: 0 0 20px rgba(0,0,0,0.4);-moz-box-shadow: 0 0 20px rgba(0,0,0,0.4);box-shadow: 0 0 20px rgba(0,0,0,0.4);">
         <div id="slideshowBorder" style=""></div>
 
@@ -156,9 +155,9 @@
             <div class="imgCont"><img src="images/pictures/ss-spd1.jpg" /></div>
             <div class="imgCont"><img src="images/pictures/ss-spd2.jpg" /></div>
             <!-- Welcome Letter-->
-            <div class="inlineBlock opensans centerDiv vertAlignTop centerText posAbs colWhite fonSize20 height100 width100" style="left: 98%;padding: 0 12px;z-index: 11;">
-                <div class="" style=" font-family: Amaranth; font-size: 36px; margin: 25px 0 25px 0;">Welcome to Sigma Phi Delta!</div>
-                <div style="font-size: 20px;padding: 0 15px;">We are a <strong>professional</strong> and <strong>social</strong> engineering fraternity made up of the most excellent male engineers at
+            <div class="inlineBlock opensans centerDiv vertAlignTop centerText posAbs colWhite fonSize20 height100 width100  scalingFontSize" style="left: 98%;padding: 0 12px;z-index: 11;">
+                <div class="" style=" font-family: Amaranth; font-size: 2.25em; margin: 25px 0 25px 0;">Welcome to Sigma Phi Delta!</div>
+                <div style="font-size: 1.25em;padding: 0 15px;">We are a <strong>professional</strong> and <strong>social</strong> engineering fraternity made up of the most excellent male engineers at
                     Stony Brook University. Our fraternity is dedicated to guiding its members towards professional and <strong>academic
                         success</strong> while enriching the college experience for engineering students.
                 </div>
@@ -189,9 +188,9 @@
             <div class="imgCont"><img src="images/pictures/ss-spd6.jpg" /></div>
             <div class="imgCont"><img src="images/pictures/ss-spd7.jpg" /></div>
             <!-- Interested in Rushing?-->
-            <div class="opensans centerDiv vertAlignTop centerText posAbs height100 width100 colWhite" style="left: 98%; font-size: 20px;padding: 0 12px;z-index: 11;">
-                <div class="" style="color: white; font-family: Amaranth; font-size: 36px; margin: 25px 0 25px 0;">Interested in joining?</div>
-                <div style="font-size: 20px;padding: 0 10px;">The academic, professional, and networking opportunities are boundless as a member of Sigma Phi Delta.
+            <div class="opensans centerDiv vertAlignTop centerText posAbs height100 width100 colWhite scalingFontSize" style="left: 98%; padding: 0 12px;z-index: 11;">
+                <div class="" style="color: white; font-family: Amaranth; font-size: 2.25em; margin: 25px 0 25px 0;">Interested in joining?</div>
+                <div style="font-size: 1.25em;padding: 0 10px;">The academic, professional, and networking opportunities are boundless as a member of Sigma Phi Delta.
                     Learn in detail about these opportunities and how to join Sigma Phi Delta at our RUSH page.
                 </div>
 
